--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="chosen_element_width">90dp</dimen>
+    <dimen name="top_sign_text_size">30sp</dimen>
+    <dimen name="top_bar_height">110dp</dimen>
+    <dimen name="cat_layout_padding">5dp</dimen>
+    <dimen name="cat_button_text_size">8sp</dimen>
+    <dimen name="left_bar_width">80dp</dimen>
+    <dimen name="chosen_element_margin_right">5dp</dimen>
 </resources>
