--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -7,4 +7,14 @@
     <dimen name="cat_button_text_size">10sp</dimen>
     <dimen name="left_bar_width">120dp</dimen>
     <dimen name="chosen_element_margin_right">5dp</dimen>
+    <dimen name="new_element_image_width">250dp</dimen>
+    <dimen name="cellgrid_image_width">60dp</dimen>
+    <dimen name="stat_top_label_padding">10dp</dimen>
+    <dimen name="stat_top_label_text_size">35sp</dimen>
+    <dimen name="opened_element_counter_padding">5dp</dimen>
+    <dimen name="opened_element_counter_text_size">30sp</dimen>
+    <dimen name="goal_image_width">120dp</dimen>
+    <dimen name="goal_text_size">30sp</dimen>
+    <dimen name="goal_padding">10dp</dimen>
+
 </resources>
