--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,14 @@
     <dimen name="cat_button_text_size">8sp</dimen>
     <dimen name="left_bar_width">80dp</dimen>
     <dimen name="chosen_element_margin_right">5dp</dimen>
+    <dimen name="new_element_image_width">200dp</dimen>
+    <dimen name="cellgrid_image_width">40dp</dimen>
+    <dimen name="stat_top_label_padding">5dp</dimen>
+    <dimen name="stat_top_label_text_size">20sp</dimen>
+    <dimen name="opened_element_counter_padding">5dp</dimen>
+    <dimen name="opened_element_counter_text_size">20sp</dimen>
+    <dimen name="goal_image_width">80dp</dimen>
+    <dimen name="goal_text_size">20sp</dimen>
+    <dimen name="goal_padding">10dp</dimen>
+
 </resources>
