--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,26 @@
     android:padding="0dp">
 
 
-    <![CDATA[
+    <!--<![CDATA[-->
 
-    AdapterViewFlipper
-        android:layout_width="100px"
-        android:layout_height="100px"
-        android:id="@+id/list"
-        android:layout_below="@+id/read"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-
+    <!--AdapterViewFlipper-->
+        <!--android:layout_width="100px"-->
+        <!--android:layout_height="100px"-->
+        <!--android:id="@+id/list"-->
+        <!--android:layout_below="@+id/read"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true" />-->
 
 
 
 
 
 
-    ]]>
+
+
+    <!--]]>-->
 
     <LinearLayout
         android:orientation="horizontal"
